feat: replace list=highlight with orthogonal highlighted filter
