# src/entities/Event/types.ts
@@ -208,11 +208,11 @@ export enum EventListType {
   Live = "live",
   Upcoming = "upcoming",
   Relevance = "relevance",
-  Highlight = "highlight",
 }
 
 export type EventListParams = {
   list?: EventListType
+  highlighted?: boolean
   owner?: boolean
   creator?: string
   position?: string
@@ -239,6 +239,7 @@ export type EventListOptions = {
   allow_pending?: boolean
   include_rejected?: boolean
   list?: EventListType
+  highlighted?: boolean
   owner?: boolean
   user?: string
   creator?: string
